@@ -363,6 +363,29 @@
       </listitem>
     </varlistentry>
     <varlistentry>
+      <term condition="pot">LogFindCopyFrom</term>
+      <listitem>
+        <para>
+          When the log dialog is started from the merge wizard,
+          already merged revisions are shown in gray, but revisions
+          beyond the point where the branch was created are also shown.
+          These revisions are shown in black because those can't be
+          merged.
+        </para>
+        <para>
+          If this option is set to <literal>true</literal> then TortoiseSVN
+          tries to find the revision where the branch was created from
+          and hide all the revisions that are beyond that revision.
+          Since this can take quite a while, this option is disabled
+          by default. Also this option doesn't work with some SVN servers
+          (e.g., Google Code Hosting, see
+          <ulink url="http://code.google.com/p/support/issues/detail?id=5471">
+            <citetitle>issue #5471</citetitle>
+          </ulink>).
+        </para>
+      </listitem>
+    </varlistentry>
+    <varlistentry>
       <term condition="pot">LogMultiRevFormat</term>
       <listitem>
         <para>
